# simulacrum

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  out.txt
src/: db.rs  db_old.rs  erc20.rs  lib.rs  lib_old.rs  simulator.rs  tracer.rs
src/tests/: erc20.rs  eth.rs  host_and_enclave.rs  mod.rs  simulator.rs
