[package]
name = "simulacrum"
version = "0.1.0"
edition = "2024"
authors = ["Koh Wei Jie <contact@kohweijie.com>"]
description = "A developer-friendly Ethereum transaction simulation library"
readme = "README.md"
repository = "https://github.com/weijiekoh/simulacrum"

[dependencies]
alloy = { version = "1.0.24", features = ["rlp", "serde"] }
alloy-eips = "1.0.24"
anyhow = "1.0.99"
bincode = "1.3.3"
ethers = "2.0.14"
revm = { version = "28.0.1", features = ["serde"] }
revm-context = { version = "9.0.1", features = ["serde"] }
revm-database = { version = "7.0.4", features = ["alloydb", "serde"] }
revm-primitives = { version = "20.2.1", features = ["serde"] }
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
